Версия с  всплывающим окном
Добавил js для всплывающего окна "Напишите нам"

--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
                             <p class="contacts-title">NЁRDS DESIGN STUDIO</p> 
                             <p class="address">191186, Санкт-Петербург,  ул. Б. Конюшенная, д. 19/8</p> 
                             <p class="phone">тел. +7 (812) 275-75-75</p>
-                            <button class="button">Напишите нам</button> 
+                            <button class="button button-link">Напишите нам</button> 
                         </div>
                     </div>
                 </div>
               
                 <!-- Модальное окно с формой "Напишите нам" --> 
-                <div class="write-us visually-hidden"><!-- Скрывающий класс временно! --> 
+                <div class="write-us modal-popup"><!-- Скрывающий класс временно! --> 
                     <h3>Напишите нам</h3>
                     <form action="https://echo.htmlacademy.ru" name="write-us-form" method="post">
                         <div class="top-line-wrapper">
@@ -189,12 +189,14 @@
                         <p>Скидка 10% для друзей из социальных сетей.</p> 
                     </div> 
                     <ul class="social-media"> 
-                        <li><a class="network" href="#"><img src="img/vk-icon.svg" alt="vk" width="26" height="15"></a></li> 
+                        <li><a class="network" href="https://vk.com/intensive_htmlcss_20"><img src="img/vk-icon.svg" alt="vk" width="26" height="15"></a></li> 
                         <li><a class="network" href="#"><img src="img/fb-icon.svg" alt="facebook" width="12" height="22"></a></li>  
                         <li><a class="network" href="#"><img src="img/insta-icon.svg" alt="instagram" width="21" height="21"></a></li> 
                     </ul> 
                 </section>
             </div> 
-        </footer> 
+        </footer>
+        <script src="js/script.js">
+        </script> 
     </body> 
 </html> 
