Add an animation of popup form

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
               
                 <!-- Модальное окно с формой "Напишите нам" --> 
-                <div class="write-us modal-popup"><!-- Скрывающий класс временно! --> 
+                <div class="write-us"><!-- Скрывающий класс временно! --> 
                     <h3>Напишите нам</h3>
                     <form action="https://echo.htmlacademy.ru" name="write-us-form" method="post">
                         <div class="top-line-wrapper">
